@@ -1,14 +1,14 @@
 package cn.projectan.strix.task;
 
 import cn.projectan.strix.core.module.sms.StrixSmsClient;
-import cn.projectan.strix.core.module.sms.StrixSmsConfig;
+import cn.projectan.strix.core.module.sms.StrixSmsStore;
 import cn.projectan.strix.model.db.SmsConfig;
-import cn.projectan.strix.model.system.StrixSmsSign;
-import cn.projectan.strix.model.system.StrixSmsTemplate;
+import cn.projectan.strix.model.other.module.sms.StrixSmsSign;
+import cn.projectan.strix.model.other.module.sms.StrixSmsTemplate;
 import cn.projectan.strix.service.SmsConfigService;
 import cn.projectan.strix.service.SmsSignService;
 import cn.projectan.strix.service.SmsTemplateService;
-import cn.projectan.strix.utils.KeysDiffHandler;
+import cn.projectan.strix.utils.KeyDiffUtil;
 import cn.projectan.strix.utils.SmsUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -20,6 +20,7 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * @author ProjectAn
@@ -28,12 +29,12 @@ import java.util.Set;
 @Slf4j
 @Component
 @EnableScheduling
-@ConditionalOnBean(StrixSmsConfig.class)
+@ConditionalOnBean(StrixSmsStore.class)
 @RequiredArgsConstructor
 public class StrixSmsTask {
 
     private final SmsUtil smsUtil;
-    private final StrixSmsConfig strixSmsConfig;
+    private final StrixSmsStore strixSmsStore;
     private final SmsConfigService smsConfigService;
     private final SmsSignService smsSignService;
     private final SmsTemplateService smsTemplateService;
@@ -41,15 +42,15 @@ public class StrixSmsTask {
     @Scheduled(cron = "0 0/5 * * * ?")
     public void refreshConfig() {
         List<SmsConfig> smsConfigList = smsConfigService.list();
-        List<String> smsConfigKeyList = smsConfigList.stream().map(SmsConfig::getKey).toList();
-        Set<String> instanceKeySet = strixSmsConfig.getInstanceKeySet();
+        List<String> smsConfigKeyList = smsConfigList.stream().map(SmsConfig::getKey).collect(Collectors.toList());
+        Set<String> instanceKeySet = strixSmsStore.getInstanceKeySet();
 
-        KeysDiffHandler.handle(instanceKeySet, smsConfigKeyList,
+        KeyDiffUtil.handle(instanceKeySet, smsConfigKeyList,
                 (removeKeys) -> removeKeys.forEach(key -> {
-                    Optional.ofNullable(strixSmsConfig.getInstance(key)).ifPresent(StrixSmsClient::close);
-                    strixSmsConfig.removeInstance(key);
+                    Optional.ofNullable(strixSmsStore.getInstance(key)).ifPresent(StrixSmsClient::close);
+                    strixSmsStore.removeInstance(key);
                 }), (addKeys) -> {
-                    List<SmsConfig> addSmsConfigList = smsConfigList.stream().filter(smsConfig -> addKeys.contains(smsConfig.getKey())).toList();
+                    List<SmsConfig> addSmsConfigList = smsConfigList.stream().filter(smsConfig -> addKeys.contains(smsConfig.getKey())).collect(Collectors.toList());
                     smsConfigService.createInstance(addSmsConfigList);
                 });
     }
@@ -57,7 +58,7 @@ public class StrixSmsTask {
 
     @Scheduled(cron = "0 10 0 * * ?")
     public void refreshSignList() {
-        Set<String> instanceKeySet = strixSmsConfig.getInstanceKeySet();
+        Set<String> instanceKeySet = strixSmsStore.getInstanceKeySet();
         instanceKeySet.forEach(key -> {
             List<StrixSmsSign> signList = smsUtil.getSignList(key);
             smsSignService.syncSignList(key, signList);
@@ -66,7 +67,7 @@ public class StrixSmsTask {
 
     @Scheduled(cron = "0 20 0 * * ?")
     public void refreshTemplateList() {
-        Set<String> instanceKeySet = strixSmsConfig.getInstanceKeySet();
+        Set<String> instanceKeySet = strixSmsStore.getInstanceKeySet();
         instanceKeySet.forEach(key -> {
             List<StrixSmsTemplate> templateList = smsUtil.getTemplateList(key);
             smsTemplateService.syncTemplateList(key, templateList);
